fixed parallax animation and loading data from api

--- a/style.css
+++ b/style.css
@@ -43,6 +43,13 @@ body {
   }
 }
 
+/* nav,
+div, */
+/* 
+img {
+  border: 1px solid red;
+} */
+
 nav {
   position: fixed;
   display: flex;
@@ -83,18 +90,13 @@ nav .nav-container {
   left: 10vw;
   cursor: pointer;
 }
-
-.logo-title {
-  box-sizing: border-box;
-  display: flex;
-  width: fit-content;
+.logo-wrapper img {
+  width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  text-transform: uppercase;
-  font-family: var(--font-futura-pt);
-  font-size: 29px;
-  line-height: 29px;
+
+  object-fit: contain;
 }
 
 .nav-container .desc-items {
@@ -180,16 +182,9 @@ nav .nav-container {
 
     left: 15px;
   }
-  .logo-title {
-    box-sizing: border-box;
-    font-size: 12px;
-    line-height: 12px;
-  }
 
-  .nav-container .mob-menu-toggle {
-    justify-content: inherit;
-
-    position: absolute;
+  .mob-menu-toggle {
+    position: fixed;
     justify-content: center;
     width: 18px;
     height: 18px;
@@ -204,10 +199,10 @@ nav .nav-container {
 
     transition: all ease 0.3s;
 
-    z-index: 10;
+    z-index: 1200;
   }
 
-  .nav-container .mob-menu-toggle-disabled::before {
+  .mob-menu-toggle-disabled::before {
     content: "";
 
     position: absolute;
@@ -220,7 +215,7 @@ nav .nav-container {
     background-color: var(--decor-primary-color);
   }
 
-  .nav-container .mob-menu-toggle-disabled::after {
+  .mob-menu-toggle-disabled::after {
     content: "";
 
     position: absolute;
@@ -232,7 +227,8 @@ nav .nav-container {
 
     background-color: var(--decor-primary-color);
   }
-  .nav-container .mob-menu-toggle-active::before {
+
+  .mob-menu-toggle-active::before {
     content: "";
 
     position: absolute;
@@ -245,7 +241,8 @@ nav .nav-container {
     background-color: var(--decor-primary-color);
     transform: rotate(45deg) translate(0, -50%);
   }
-  .nav-container .mob-menu-toggle-active::after {
+  /* .nav-container  */
+  .mob-menu-toggle-active::after {
     content: "";
 
     position: absolute;
@@ -259,7 +256,8 @@ nav .nav-container {
     transform: rotate(-45deg) translate(0, 50%);
   }
 
-  .nav-container .mob-menu-toggle .line-burger-active {
+  /* .nav-container  */
+  .mob-menu-toggle .line-burger-active {
     display: flex;
     position: absolute;
     width: 100%;
@@ -292,9 +290,9 @@ nav .nav-container {
     top: 50px;
     right: 0;
 
-    transform: translateY(-300px);
+    transform: translateX(120%);
     transition: all ease 0.4s;
-    z-index: 900;
+    z-index: 1200;
   }
   .mob-item-wrapper {
     position: relative;
@@ -309,7 +307,7 @@ nav .nav-container {
     background-color: var(--decor-primary-color);
   }
   .mob-nav-active {
-    transform: translateY(0);
+    transform: translateX(0);
   }
 
   .mob-items .mob-item {
@@ -374,6 +372,8 @@ nav .nav-container {
   flex-direction: column;
   width: fit-content;
   height: 100%;
+
+  padding: 0 18px 0 0;
 }
 .hero-title {
   display: flex;
@@ -487,7 +487,8 @@ nav .nav-container {
   .hero {
     flex-direction: column;
     min-height: fit-content;
-    width: 90%;
+    width: 100%;
+    /* width: 90%; */
     height: auto;
     margin: 94px auto 0 auto;
   }
@@ -505,6 +506,7 @@ nav .nav-container {
   .hero-description {
     width: 90%;
     margin: 0 auto;
+    padding: 0;
   }
 
   .hero-title {
@@ -523,7 +525,7 @@ nav .nav-container {
 
   .hero-description .wrapper .text {
     display: flex;
-    width: 90%;
+    max-width: 273px;
     margin: 20px auto 0 auto;
     font-size: 13px;
     line-height: 17px;
@@ -543,110 +545,121 @@ nav .nav-container {
   padding: 0;
   width: 100%;
   height: 153px;
+
+  z-index: -10;
 }
 
 .decor-abstr {
   position: absolute;
-  box-sizing: border-box;
+  box-sizing: content-box;
   display: flex;
+
+  overflow: hidden;
   z-index: 10;
 }
 
 .decor-abstr-1 {
-  box-sizing: border-box;
-  width: 124px;
+  width: 500px;
   height: 324px;
-  right: 0;
-  top: -340px;
+  left: 0;
+  top: -80px;
 }
 
 .decor-1 {
-  box-sizing: border-box;
   display: flex;
-  width: 100%;
-  height: 100%;
-  background-image: url("./img/Vector-s.png");
+  height: 320px;
+  width: 812px;
+  background-image: url("./img/blot-grey.svg");
   background-size: contain;
   background-position: 10px 0;
   background-repeat: no-repeat;
+
+  transform: rotate(-60deg) translate(-180px, -180px);
 }
 .decor-abstr-2 {
-  box-sizing: border-box;
-  width: 480px;
-  height: 513px;
+  width: 500px;
+  height: 324px;
   right: 0;
   top: -100px;
-  overflow: hidden;
 }
 .decor-2 {
   position: absolute;
   box-sizing: border-box;
   display: flex;
-  width: 100%;
-  height: 100%;
+  height: 320px;
+  width: 812px;
   top: 0;
-  left: 22%;
-  background-image: url("./img/Vector-r.png");
+  left: 60px;
+  background-image: url("./img/blot-grey.svg");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  transform: rotate(-40deg);
 }
 .decor-abstr-3 {
-  box-sizing: border-box;
-  width: 389px;
+  width: 180px;
   height: 320px;
-  left: 0;
-  top: -40px;
+  right: 0;
+  top: -400px;
 }
 .decor-3 {
-  box-sizing: border-box;
   display: flex;
-  width: 100%;
-  height: 100%;
-  background-image: url("./img/Vector-l.png");
+  position: absolute;
+  height: 127px;
+  width: 324px;
+  top: 80px;
+  left: 0%;
+  background-image: url("./img/blot-grey.svg");
   background-size: contain;
-  background-position: -20px 0;
+  background-position: center;
   background-repeat: no-repeat;
+
+  transform: rotate(40deg);
 }
-/* and (min-width: 768px) */
-@media screen and (max-width: 1240px) {
+@media screen and (max-width: 768px) {
   .decor-wrapper {
     position: relative;
     display: flex;
     width: 100%;
     height: 155px;
     z-index: -10;
-    /* background-color: aliceblue; */
   }
-  .decor-abstr {
-    position: absolute;
+  .decor-abstr-1 {
+    width: 160px;
+
+    height: 240px;
+    left: 0;
   }
   .decor-1 {
-    display: none;
+    position: absolute;
+    height: 160px;
+    width: 240px;
+
+    top: 30%;
+    right: 20%;
+
+    background-size: contain;
+    background-position: center;
+
+    transform: rotate(-40deg) translate(0px, 0px);
   }
   .decor-abstr-2 {
     width: 160px;
     height: 240px;
-    top: 0;
+    top: -80px;
     right: 0;
   }
   .decor-2 {
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 26%;
-    transform: rotate(-180deg);
+    height: 160px;
+    width: 240px;
+    top: auto;
+    bottom: 16%;
+    left: 16%;
+    transform: rotate(-60deg);
     object-fit: contain;
-    background-position: 10px 0;
-    transform: rotate(-40deg);
+    background-position: center;
   }
-
-  .decor-3 {
-    width: 130px;
-    height: 220px;
-    top: 720px;
-    background-position: 0px 0;
+  .decor-abstr-3 {
+    display: none;
   }
 }
 /* @media screen and (max-width: 768px) {
@@ -694,6 +707,8 @@ nav .nav-container {
   position: relative;
   margin: 0;
   padding: 0;
+
+  text-align: center;
 }
 .underline::after {
   position: absolute;
@@ -737,6 +752,7 @@ nav .nav-container {
   font-family: var(--font-futura-pt);
 
   transition: all ease 1s;
+  /* overflow: hidden; */
 }
 
 .description-container .card:hover::after {
@@ -876,44 +892,44 @@ h4 {
 
 .img-container .decor-el {
   position: absolute;
-  width: 77px;
-  height: 195px;
+  height: 77px;
+  width: 135px;
 
-  background-image: url("./img/Vector-xxs.png");
+  background-image: url("./img/blot-grey.svg");
   background-repeat: no-repeat;
   background-size: contain;
   z-index: -10;
 }
 
 .img-container .decor-el-1 {
-  top: -6%;
-  left: -40px;
-  transform: rotate(-150deg);
+  bottom: 16%;
+  left: -84px;
+  transform: rotate(-116deg);
 }
 .img-container .decor-el-2 {
-  top: 0;
-  right: -60px;
-  transform: rotate(20deg);
+  top: 24%;
+  right: -80px;
+  transform: rotate(90deg);
 }
 .img-container .decor-el-3 {
-  bottom: 6%;
-  left: -40px;
-  transform: rotate(-160deg);
+  bottom: 16%;
+  left: -80px;
+  transform: rotate(76deg);
 }
 .img-container .decor-el-4 {
-  bottom: 3%;
-  right: -18px;
-  transform: rotate(180deg);
+  bottom: 10%;
+  right: -60px;
+  transform: rotate(66deg);
 }
 .img-container .decor-el-5 {
-  top: 20%;
-  left: -50px;
-  transform: rotate(-8deg);
+  bottom: 36%;
+  left: -90px;
+  transform: rotate(-130deg);
 }
 .img-container .decor-el-6 {
-  bottom: 3%;
-  right: -25px;
-  transform: rotate(180deg);
+  bottom: 10%;
+  right: -60px;
+  transform: rotate(66deg);
 }
 
 @media screen and (max-width: 768px) {
@@ -978,8 +994,8 @@ h4 {
     line-height: 16px;
   }
   .description-container .card ul {
-    flex-direction: column;
-    align-items: center;
+    height: max-content;
+    margin: 0 0 0 6px;
   }
   .description-container .card ul li {
     margin: 20px 0 20px 0px;
@@ -1279,7 +1295,7 @@ h4 {
   flex-direction: column;
   align-items: center;
   width: 40%;
-  height: auto;
+  height: 100%;
 
   top: 0;
   left: 50%;
@@ -1290,18 +1306,18 @@ h4 {
   position: relative;
   box-sizing: border-box;
   display: flex;
-  width: 100%;
-  height: fit-content;
+  justify-content: center;
+  width: min-content;
+  height: 90%;
 
   z-index: 10;
 }
 
 .content-wrapper .primary-product .product-img .primary-img {
   display: flex;
-  width: 100%;
-  height: fit-content;
-  object-fit: scale-down;
-  object-position: center;
+  width: min-content;
+  height: 100%;
+  object-fit: contain;
 }
 
 .product-img .decor1 {
@@ -1349,20 +1365,40 @@ h4 {
   background-color: var(--decor-primary-color);
 }
 
+/*  */
+
+.dog-parallax-section {
+  position: relative;
+  box-sizing: border-box;
+  box-sizing: border-box;
+  display: flex;
+
+  width: 100%;
+  height: 550px;
+
+  margin: 0;
+  padding: 0;
+
+  background-color: var(--font-color-light-active);
+}
+
 .dog-container {
   position: relative;
   box-sizing: border-box;
   display: flex;
-  width: 100%;
-  height: 550px;
-  background-color: var(--font-color-light-active);
+  justify-content: center;
+  width: 800px;
+  height: 100%;
+
+  margin: 0 auto;
 }
 
 .bottom-dog {
   position: absolute;
   display: flex;
   object-fit: contain;
-  width: 100%;
+  object-position: center bottom;
+  width: auto;
   height: 490px;
   bottom: 0px;
   z-index: 10;
@@ -1376,17 +1412,38 @@ h4 {
 
   margin: 0;
   padding: 0;
+  overflow: hidden;
+}
 
+.bg-dog img {
+  display: flex;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 .bg-dog1 {
   top: 25%;
-  left: 26%;
+  left: 10%;
 }
+.bg-dog1 img {
+  object-position: center center;
+}
+
 .bg-dog2 {
-  top: 10%;
-  right: 23%;
+  top: 15%;
+  right: 0%;
 }
+
+.bg-dog2 img {
+  object-position: 30px 90%;
+  transform: rotate(30deg);
+}
+
+.bottom-dog,
+.bg-dog {
+  transition: transform 0.3s ease-out;
+}
+
 @media screen and (min-width: 769px) and (max-width: 1240px) {
   /*  */
   .composition {
@@ -1445,6 +1502,8 @@ h4 {
   .content-wrapper .row {
     width: 100%;
     min-height: fit-content;
+
+    /* flex-direction: column; */
   }
   .content-wrapper .row .item .text {
     width: 90%;
@@ -1452,7 +1511,7 @@ h4 {
     min-height: fit-content;
   }
   /*  */
-  .content-wrapper .row .item:nth-child(2)::before,
+  /* .content-wrapper .row .item:nth-child(2)::before,
   .content-wrapper .row .item:nth-child(2)::after {
     position: absolute;
     content: "";
@@ -1476,14 +1535,13 @@ h4 {
   .content-wrapper .row .item:nth-child(2)::after {
     right: -7%;
     transform: rotate(35deg);
-  }
+  } */
   /*  */
-  .content-wrapper .row {
-    flex-direction: column;
-    width: 100%;
-  }
+
   .content-wrapper .row .item {
-    width: 100%;
+    width: 290px;
+    min-width: min-content;
+    /* width: 100%; */
     margin: 30px auto;
     min-height: fit-content;
     overflow: hidden;
@@ -1506,8 +1564,9 @@ h4 {
     height: 500px;
   }
   .content-wrapper .primary-product .product-img .primary-img {
-    width: 100%;
+    /* width: min-content; */
     height: 100%;
+
     object-fit: contain;
     object-position: center;
   }
@@ -1579,6 +1638,7 @@ h4 {
     transform: rotate(35deg);
   }
   .content-wrapper .row {
+    flex-direction: column;
     width: 100%;
     height: auto;
   }
@@ -1587,10 +1647,26 @@ h4 {
     width: 100%;
     height: fit-content;
     margin: 20px auto;
-
+    overflow-wrap: break-word;
     overflow: hidden;
   }
   /*  */
+  .content-wrapper .row .item:nth-child(2)::before,
+  .content-wrapper .row .item:nth-child(2)::after {
+    position: absolute;
+    content: "";
+
+    width: 137px;
+    height: 70px;
+
+    top: 40px;
+
+    background-image: url("./img/blot-grey.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-color: transparent;
+  }
   .content-wrapper .row .item:nth-child(2)::before,
   .content-wrapper .row .item:nth-child(2)::after {
     position: absolute;
@@ -1617,13 +1693,16 @@ h4 {
   }
 
   .content-wrapper .row .item .text {
+    max-width: 290px;
     width: 90%;
     margin: 0 auto;
     height: fit-content;
+    overflow-wrap: break-word;
+
+    font-size: 16px;
+    line-height: 18px;
   }
-  .content-wrapper .row {
-    flex-direction: column;
-  }
+
   /*  */
 
   /*  */
@@ -1659,10 +1738,6 @@ h4 {
     font-size: 16px;
     line-height: 18px;
   }
-  .content-wrapper .row .item .text {
-    font-size: 16px;
-    line-height: 18px;
-  }
 
   .content-wrapper .primary-product {
     position: relative;
@@ -1673,9 +1748,11 @@ h4 {
   }
 
   .content-wrapper .primary-product .product-img {
+    width: 100%;
     height: 411px;
 
     margin: 0 0 40px 0;
+    overflow: hidden;
   }
 
   .content-wrapper .primary-product .product-img .primary-img {
@@ -1700,12 +1777,11 @@ h4 {
   }
 
   .dog-container {
-    width: 100%;
+    position: relative;
+    /* width: 100%; */
     height: 290px;
 
-    margin: 0px auto 0 auto;
-
-    overflow: hidden;
+    /* overflow: hidden; */
   }
   .bottom-dog {
     width: 100%;
@@ -1715,14 +1791,23 @@ h4 {
     object-position: bottom;
   }
 
+  .bg-dog {
+    width: 80px;
+    height: 202px;
+
+    overflow: hidden;
+  }
+
   .bg-dog1 {
-    top: 10%;
-    left: 0;
+    top: 30%;
+    left: 10%;
   }
   .bg-dog2 {
-    top: 10%;
-    right: -26%;
-    transform: rotate(20deg);
+    top: 24%;
+    right: 10%;
+  }
+  .bg-dog2 img {
+    transform: rotate(50deg);
   }
 }
 
@@ -1786,10 +1871,9 @@ h4 {
   width: 13px;
   height: 7px;
 
-  top: 50%;
-  right: 40px;
-
-  transform: translateY(-50%);
+  bottom: 20px;
+  right: 50%;
+  transform: translateX(20px);
 
   background-image: url("./img/select-arrow.svg");
   background-repeat: no-repeat;
@@ -1799,12 +1883,13 @@ h4 {
 .product-list {
   position: relative;
   display: flex;
-  justify-content: space-evenly;
+
+  justify-content: center;
+  max-width: 1920px;
   width: 90%;
   height: max-content;
   min-height: 480px;
-  margin: 0 auto;
-
+  margin: 0 auto 30px auto;
   flex-wrap: wrap;
 }
 
@@ -1813,8 +1898,10 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 300px;
-  height: 300px;
+  width: 371px;
+  min-width: max-content;
+  height: 350px;
+  min-height: max-content;
   margin: 12px;
   font-family: var(--font-futura-pt);
   font-size: 31px;
@@ -1829,7 +1916,9 @@ h4 {
     justify-content: center;
     align-items: center;
     width: 260px;
-    height: 92px;
+    max-width: 90%;
+    max-height: 92px;
+    min-height: max-content;
 
     padding: 0;
   }
@@ -1839,43 +1928,54 @@ h4 {
     text-align: center;
     padding: 0;
     width: 100%;
-    height: 46px;
+    max-height: 50%;
+    min-height: max-content;
     font-size: 20px;
+    overflow-wrap: break-word;
   }
   #produkt-list {
     position: relative;
     width: 100%;
+    min-width: 90%;
     height: 46px;
+    min-height: none;
     margin: 0 auto;
     font-size: 20px;
     font-weight: 700;
   }
 
-  .products .select-wrapper::after {
-    position: absolute;
-    content: "";
-    display: flex;
-    box-sizing: border-box;
-    width: 13px;
-    height: 7px;
-
-    top: 75%;
-    right: 100px;
-
-    transform: translateY(-50%);
-  }
-
-  .product {
-    width: 105px;
-    height: 105px;
-  }
   .product h2 {
     font-size: 31px;
   }
 }
 
+@media screen and (max-width: 420px) {
+  .product {
+    width: 105px;
+    height: 105px;
+  }
+}
+
 /*  */
-.blur-container {
+.blur-container_mob-bg {
+  position: fixed;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+
+  top: 0;
+  right: 0;
+
+  overflow: hidden;
+
+  background-color: #ffffffdd;
+  z-index: 100;
+
+  cursor: pointer;
+
+  z-index: 1100;
+}
+.blur-container_pop-up {
   position: fixed;
   box-sizing: border-box;
   width: 100%;
